--- a/request-reimbursement/src/main/resources/application.yaml
+++ b/request-reimbursement/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     url: ${DB_URL}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
