--- a/request-reimbursement/docker-compose.yml
+++ b/request-reimbursement/docker-compose.yml
@@ -22,3 +22,15 @@ services:
       - MYSQL_DATABASE=my-docker-database
       - MYSQL_USER=admin
       - MYSQL_PASSWORD=password
+  prom:
+    image: 'bitnami/prometheus'
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - 9090:9090
+  graf:
+    image: 'grafana/grafana'
+    container_name: grafana
+    ports:
+      - 3000:3000
