--- a/request-reimbursement/docker-compose.yml
+++ b/request-reimbursement/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   web:
-    image: rr-app
+    image: 'rr-app'
     container_name: app1
     restart: always
     environment:
@@ -13,7 +13,7 @@ services:
     depends_on:
       - db
   db:
-    image: mysql
+    image: 'mysql'
     container_name: db
     command: --default-authentication-plugin=mysql_native_password
     restart: always
