--- a/request-reimbursement/docker-compose.yml
+++ b/request-reimbursement/docker-compose.yml
@@ -1,36 +1,37 @@
 services:
   web:
-    image: 'rr-app'
+    image: rr-app
     container_name: app1
     restart: always
     environment:
-      - MY_PORT=7000
-      - DB_URL=jdbc:mysql://db:3306/my-docker-database
-      - DB_USERNAME=admin
-      - DB_PASSWORD=password
+      #- MY_PORT=7000
+      - DB_URL=jdbc:mysql://34.135.95.88:3306/my-docker-database
+      #- DB_USERNAME=admin
+      #- DB_PASSWORD=password
     ports:
       - 7000:7000
     depends_on:
       - db
   db:
-    image: 'mysql'
+    image: mysql
     container_name: db
-    command: --default-authentication-plugin=mysql_native_password
+    #command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=my-secret-pw
+      - MYSQL_ROOT_PASSWORD=p4ssw0rd
       - MYSQL_DATABASE=my-docker-database
-      - MYSQL_USER=admin
-      - MYSQL_PASSWORD=password
-  prom:
-    image: 'bitnami/prometheus'
-    container_name: prometheus
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - 9090:9090
-  graf:
-    image: 'grafana/grafana'
-    container_name: grafana
-    ports:
-      - 3000:3000
+      - MYSQL_ROOT_USER=root
+      #- MYSQL_USER=admin
+      #- MYSQL_PASSWORD=password
+      #prom:
+      #image: 'bitnami/prometheus'
+      #container_name: prometheus
+      #volumes:
+      #- ./prometheus.yml:/etc/prometheus/prometheus.yml
+      #ports:
+      #- 9090:9090
+      #graf:
+      #image: 'grafana/grafana'
+      #container_name: grafana
+      #ports:
+      #- 3000:3000
