--- a/email-api/src/main/resources/application.yaml
+++ b/email-api/src/main/resources/application.yaml
@@ -17,3 +17,21 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: darylnauman@gmail.com
+    password: ${GMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+    #props:
+     # mail.smtp.auth: true
+      #mail.smtp.starttls.enable: true
+      #mail.smtp.ssl.trust: <host>
+      #mail.smtp.host: smtp.gmail.com
+      #mail.smtp.port: 587
