Removed reference to db from email app; added env variable; corrected url in email-app to map to web1 for get request

--- a/email-api/src/main/resources/application.yaml
+++ b/email-api/src/main/resources/application.yaml
@@ -6,17 +6,17 @@ management:
       exposure:
         include: "*"
 spring:
-  datasource:
-    username: root
-    password: p4ssw0rd
-    url: jdbc:mysql://34.135.95.88:3306/my-docker-database
-    driverClassName: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    show-sql: true
+  #datasource:
+    #username: root
+    #password: p4ssw0rd
+    #url: jdbc:mysql://34.135.95.88:3306/my-docker-database
+    #driverClassName: com.mysql.cj.jdbc.Driver
+  #jpa:
+    #hibernate:
+      #ddl-auto: update
+      #naming:
+        #physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    #show-sql: true
   mail:
     host: smtp.gmail.com
     port: 587
