--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,21 +12,20 @@ services:
       - 7000:7000
     depends_on:
       - db
-
   web2:
     image: email-app
     container_name: app2
     restart: always
     environment:
+      - GMAIL_PASSWORD=zehbyrkkvqeniqkn
       #- MY_PORT=7000
-      - DB_URL=jdbc:mysql://34.135.95.88:3306/my-docker-database
+      #- DB_URL=jdbc:mysql://34.135.95.88:3306/my-docker-database
       #- DB_USERNAME=admin
       #- DB_PASSWORD=password
     ports:
       - 7500:7500
-    depends_on:
-      - db
-  
+    #depends_on:
+      #- db
   db:
     image: mysql
     container_name: db
