--- a/email-api/docker-compose.yml
+++ b/email-api/docker-compose.yml
@@ -5,22 +5,22 @@ services:
     restart: always
     environment:
       #- MY_PORT=7000
-      - DB_URL=jdbc:mysql://34.135.95.88:3306/my-docker-database
+      #- DB_URL=jdbc:mysql://34.135.95.88:3306/my-docker-database
       #- DB_USERNAME=admin
       #- DB_PASSWORD=password
     ports:
       - 7500:7500
-    depends_on:
-      - db
-  db:
-    image: mysql
-    container_name: db
+    #depends_on:
+     # - db
+  #db:
+    #image: mysql
+    #container_name: db
     #command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-      - MYSQL_ROOT_PASSWORD=p4ssw0rd
-      - MYSQL_DATABASE=my-docker-database
-      - MYSQL_ROOT_USER=root
+    #restart: always
+    #environment:
+      #- MYSQL_ROOT_PASSWORD=p4ssw0rd
+      #- MYSQL_DATABASE=my-docker-database
+      #- MYSQL_ROOT_USER=root
       #- MYSQL_USER=admin
       #- MYSQL_PASSWORD=password
       #prom:
